2002-10-04  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/os2/gnupmdrv.rc src/os2/dialogs.h src/os2/gclient.c: Update of
	menu entries of gnupmdrv with respect to the current state of hotkeys
	and mousing.

2002-09-30  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/os2/gclient.c: Support for textcolors.

2002-09-29  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c: Improve vertical placement of rotated text.

2002-09-27  James R. Van Zandt  <jrv@debian.org>

	* term/cgm.trm (cgm_default_color_table): adjust default colors
	for better contrast with background and each other 

2002-09-09  Johannes Zellner  <johannes@zellner.org>

	* term/cgm.trm: point types and line types (colors) similar
	to the postscript driver

2002-09-27  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	Integrated SF Patch #606726 by Harald Harders. This implements a
 	new setting "fitlogfile" to override the default filename
 	"fit.log" for the fit result log.
	
	* src/fit.c (fitlogfile): Renamed from logfile, and made
 	externally visible instead of file-global.
	(fitlogfile_default): New variable to hold default log file name.
	(fit_command): Replaced code to determine file name by call to
 	getfitlogfile.
	(getfitlogfile): New function.  Extracted from fit_command, and
 	extended to check new user-settable variable fitlogfile before
 	using environment variable $FIT_LOG or the default.  Returns

	* src/fit.h (fitlogfile, getfitlogfile): Declare new exports of
 	fit.c.

	* docs/gnuplot.doc (environment): $FIT_LOG is only the default,
 	but no longer the fixed filename for the fit log output.
	(fit): Reference "set fitlogfile" to override $FIT_LOG or
 	"fit.log", respectively.
	(fitlogfile): Document new option.

	* src/tables.h (set_id): New entry S_FITLOGFILE.

	* src/tables.c (set_tbl): New entry to handle set/show/unset
 	fitlogfile.

	* src/set.c (set_command): Added handling of fitlogfile to error
 	message and big switch block.